[gd_scene load_steps=6 format=2]

[ext_resource path="res://1.tres" type="Theme" id=1]
[ext_resource path="res://Objects/NumberKeyboard/NumberKeyboard.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Player/PlayerKeeper.gd" type="Script" id=4]
[ext_resource path="res://Assets/Back.svg" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
resource_local_to_scene = true
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="PlayerKeeper" type="Control"]
anchor_right = 1.0
rect_min_size = Vector2( 340, 100 )
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="Name" type="Button" parent="."]
anchor_right = 0.5
margin_bottom = 75.0
text = "Name"
clip_text = true

[node name="ProgressBar" type="ProgressBar" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
custom_styles/fg = SubResource( 1 )
value = 60.0
percent_visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.55
anchor_right = 1.0
margin_bottom = 75.0
custom_constants/separation = 50

[node name="Score" type="Label" parent="HBoxContainer"]
modulate = Color( 0.0627451, 0.67451, 0.517647, 1 )
margin_top = 10.0
margin_right = 137.0
margin_bottom = 65.0
size_flags_horizontal = 7
theme_type_variation = "48"
text = "6000"
align = 1

[node name="Percent" type="Label" parent="HBoxContainer"]
margin_left = 187.0
margin_top = 10.0
margin_right = 324.0
margin_bottom = 65.0
size_flags_horizontal = 7
theme_type_variation = "48"
text = "60%"
align = 1
valign = 3

[node name="Input" type="CanvasLayer" parent="."]
layer = 2

[node name="Control" type="Control" parent="Input"]
visible = false
margin_right = 720.0
margin_bottom = 1480.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Input/Control"]
margin_left = -130.0
margin_top = -134.0
margin_right = 882.0
margin_bottom = 1672.0
focus_mode = 1

[node name="ScoreInput" type="LineEdit" parent="Input/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -278.0
margin_top = -45.5
margin_right = 278.0
margin_bottom = 45.5
virtual_keyboard_enabled = false
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Input/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -274.0
margin_top = -250.0
margin_right = 274.0
margin_bottom = -150.0
text = "Enter score:"
align = 1
valign = 1

[node name="Enter" type="Button" parent="Input/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = 100.0
margin_right = 88.0
margin_bottom = 160.0
text = "Enter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberKeyboard" parent="Input/Control" instance=ExtResource( 3 )]
unique_name_in_owner = true
line_edit_path = NodePath("../ScoreInput")

[node name="Back" type="TextureButton" parent="Input/Control"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.1
anchor_top = 0.025
anchor_right = 0.1
anchor_bottom = 0.025
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[connection signal="pressed" from="Name" to="." method="_on_Name_pressed"]
[connection signal="focus_entered" from="Input/Control/ColorRect" to="." method="_on_ColorRect_focus_entered"]
[connection signal="focus_entered" from="Input/Control/ScoreInput" to="." method="_on_ScoreInput_focus_entered"]
[connection signal="pressed" from="Input/Control/Enter" to="." method="_on_Enter_pressed"]
[connection signal="focus_exited" from="Input/Control/NumberKeyboard" to="." method="_on_NumberKeyboard_focus_exited"]
[connection signal="pressed" from="Input/Control/Back" to="." method="_on_Back_pressed"]
